Use ToscaPolicy instead of legacy Policy
Removed usage of policy-yaml and old targetType definition.

Switched to using TOSCA operational policy classes and new
definitions for Target type enum.

Issue-ID: POLICY-2428
Change-Id: I25d1c5219764df27bdae7f2cbeb7ada7bcef4e1e
Signed-off-by: Jim Hahn <jrh3@att.com>
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>