@@ -30,7 +30,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.Test;
@@ -38,9 +37,9 @@ import org.onap.policy.common.utils.coder.CoderException;
 import org.onap.policy.common.utils.coder.StandardCoder;
 import org.onap.policy.common.utils.resources.ResourceUtils;
 import org.onap.policy.controlloop.ControlLoopException;
-import org.onap.policy.controlloop.policy.FinalResult;
-import org.onap.policy.controlloop.policy.Policy;
-import org.onap.policy.controlloop.policy.PolicyResult;
+import org.onap.policy.controlloop.actorserviceprovider.OperationFinalResult;
+import org.onap.policy.controlloop.actorserviceprovider.OperationResult;
+import org.onap.policy.drools.domain.models.operational.Operation;
 import org.onap.policy.models.tosca.authorative.concepts.ToscaPolicy;
 import org.onap.policy.models.tosca.authorative.concepts.ToscaServiceTemplate;
 import org.slf4j.Logger;
@@ -52,8 +51,7 @@ public class ControlLoopProcessorTest {
 
     @Test
     public void testControlLoopProcessor() throws IOException, ControlLoopException {
-        InputStream is = new FileInputStream(new File("src/test/resources/test.yaml"));
-        String yamlString = IOUtils.toString(is, StandardCharsets.UTF_8);
+        String yamlString = Files.readString(new File("src/test/resources/test.yaml").toPath(), StandardCharsets.UTF_8);
         this.testSuccess(yamlString);
         this.testFailure(yamlString);
     }
@@ -116,18 +114,18 @@ public class ControlLoopProcessorTest {
         String yamlString = IOUtils.toString(is, StandardCharsets.UTF_8);
 
         assertThatThrownBy(() -> new ControlLoopProcessor(yamlString))
-            .hasMessageStartingWith("Cannot create property=string for JavaBean=ControlLoopPolicy");
+            .hasMessageEndingWith("Cannot decode yaml into ToscaServiceTemplate");
     }
 
     @Test
     public void testControlLoopProcessorBadTriggerYaml() throws IOException, ControlLoopException {
-        InputStream is = new FileInputStream(new File("src/test/resources/badtriggerpolicy.yaml"));
-        String yamlString = IOUtils.toString(is, StandardCharsets.UTF_8);
+        String yamlString = Files.readString(new File("src/test/resources/badtriggerpolicy.yaml").toPath(),
+                        StandardCharsets.UTF_8);
 
         ControlLoopProcessor clProcessor = new ControlLoopProcessor(yamlString);
         assertNull(clProcessor.getCurrentPolicy());
 
-        assertThatThrownBy(() -> clProcessor.nextPolicyForResult(PolicyResult.SUCCESS))
+        assertThatThrownBy(() -> clProcessor.nextPolicyForResult(OperationResult.SUCCESS))
             .hasMessageStartingWith("There is no current policy to determine where to go to.");
     }
 
@@ -146,12 +144,12 @@ public class ControlLoopProcessorTest {
         InputStream is = new FileInputStream(new File("src/test/resources/test.yaml"));
         String yamlString = IOUtils.toString(is, StandardCharsets.UTF_8);
 
-        for (PolicyResult result : PolicyResult.values()) {
+        for (OperationResult result : OperationResult.values()) {
             checkResult(yamlString, result);
         }
     }
 
-    private void checkResult(String yamlString, PolicyResult result) throws ControlLoopException {
+    private void checkResult(String yamlString, OperationResult result) throws ControlLoopException {
         ControlLoopProcessor clProcessor = new ControlLoopProcessor(yamlString);
         clProcessor.getCurrentPolicy();
         clProcessor.nextPolicyForResult(result);
@@ -165,17 +163,17 @@ public class ControlLoopProcessorTest {
      */
     public void testSuccess(String yaml) throws ControlLoopException {
         ControlLoopProcessor processor = new ControlLoopProcessor(yaml);
-        logger.debug("testSuccess: {}", processor.getControlLoop());
+        logger.debug("testSuccess: {}", processor.getCurrentPolicy());
         while (true) {
-            FinalResult result = processor.checkIsCurrentPolicyFinal();
+            OperationFinalResult result = processor.checkIsCurrentPolicyFinal();
             if (result != null) {
                 logger.debug("{}", result);
                 break;
             }
-            Policy policy = processor.getCurrentPolicy();
+            Operation policy = processor.getCurrentPolicy();
             assertNotNull(policy);
-            logger.debug("current policy is: {} {}", policy.getId(), policy.getName());
-            processor.nextPolicyForResult(PolicyResult.SUCCESS);
+            logger.debug("current policy is: {}", policy.getId());
+            processor.nextPolicyForResult(OperationResult.SUCCESS);
         }
     }
 
@@ -187,17 +185,17 @@ public class ControlLoopProcessorTest {
      */
     public void testFailure(String yaml) throws ControlLoopException {
         ControlLoopProcessor processor = new ControlLoopProcessor(yaml);
-        logger.debug("testFailure: {}", processor.getControlLoop());
+        logger.debug("testFailure: {}", processor.getCurrentPolicy());
         while (true) {
-            FinalResult result = processor.checkIsCurrentPolicyFinal();
+            OperationFinalResult result = processor.checkIsCurrentPolicyFinal();
             if (result != null) {
                 logger.debug("{}", result);
                 break;
             }
-            Policy policy = processor.getCurrentPolicy();
+            Operation policy = processor.getCurrentPolicy();
             assertNotNull(policy);
-            logger.debug("current policy is: {} {}", policy.getId(), policy.getName());
-            processor.nextPolicyForResult(PolicyResult.FAILURE);
+            logger.debug("current policy is: {}", policy.getId());
+            processor.nextPolicyForResult(OperationResult.FAILURE);
         }
     }
 }
